--- a/.luarc.json
+++ b/.luarc.json
@@ -1,5 +1,9 @@
 {
+    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
     "diagnostics.disable": [
         "undefined-global"
+    ],
+    "workspace.library": [
+        "./library/cc/"
     ]
 }
