--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "bun-plugin-tailwind": "^0.0.15"
+    "@tanstack/react-query": "^5.75.5",
+    "bun-plugin-tailwind": "^0.0.15",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "scripts": {
+    "start": "bun run index.ts"
   }
 }
