--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tanstack/react-query": "^5.75.5",
     "bun-plugin-tailwind": "^0.0.15",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router": "^7.6.0"
   },
   "scripts": {
     "start": "bun run index.ts"
